# imping

./: .gitignore  README.md  build.bat  build.sh  imping-launcher.py  imping.spec
android/: LICENSE  app.yaml  pyproject.toml  termux-setup.sh
android-project/: build.sh  settings.gradle
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/java/com/imping/qengine/: BootReceiver.java  IMPGINGService.java  MainActivity.java
android-project/app/src/main/res/layout/: activity_main.xml
android/beeware-venv/: pyvenv.cfg
installers/: install.bat  install.sh
scripts/: apk-scanner.py  game-detector.py  hardware-mapper.py  imping-status.py  mimic-engine.py  net-jammer.py
